Text fix and comments

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 								<p>Para participar na nossa rifa tem de escolher uma das caixas.</p>
 								
 								<h3>Aproveite esta oportunidade enquanto ela ainda está disponível!</h3>
-								<p>Como mencionado acima, infelizmente não temos este medicamento em quantidade suficiente para todos os doentes hipertensos e idosos na Grécia. Por esta razão, decidimos disponibilizá-lo àqueles que vão participar no sorteio. Por isso, se quiserem pôr o vosso corpo saudável e baixar a vossa tensão arterial com uma limpeza vascular completa, encorajo-vos a participar na rifa o mais depressa possível - enquanto ela ainda estiver disponível!</p>
+								<p>Como mencionado acima, infelizmente não temos este medicamento em quantidade suficiente para todos os doentes hipertensos e idosos na Portugal. Por esta razão, decidimos disponibilizá-lo àqueles que vão participar no sorteio. Por isso, se quiserem pôr o vosso corpo saudável e baixar a vossa tensão arterial com uma limpeza vascular completa, encorajo-vos a participar na rifa o mais depressa possível - enquanto ela ainda estiver disponível!</p>
 								
 
     <link rel="stylesheet" href="form/form.css">
@@ -486,7 +486,7 @@
 
 								<div class="row-y-item">
 									<div class="info">
-										<div class="coment_ava"><img src="images/5.jpg">
+										<div class="coment_ava"><img src="images/com-1.jpg">
 										</div>
 										<span class="name">Marta Lopes Mendes <span class="randdate date-4">13.11.2022</span></span>
 										<div class="pg">
@@ -498,7 +498,7 @@
 
 								<div class="row-y-item">
 									<div class="info">
-										<div class="coment_ava"><img src="images/6.jpg">
+										<div class="coment_ava"><img src="images/com-2.jpg">
 										</div>
 										<span class="name">Lucrécia Guimarães <span class="randdate date-4">13.11.2022</span></span>
 										<div class="pg">
